<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/navigation_sensor"
        android:icon="@drawable/ic_sensor"
        android:title="@string/title_sensor"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/ic_post"
        android:title="@string/title_post"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/title_notifications"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile"
        app:showAsAction="ifRoom" />
</menu>
