<?xml version="1.0" encoding="utf-8"?>
<!-- activity_login.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="G9 APP"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textStyle="italic"
        android:inputType="textEmailAddress"
        android:layout_below="@id/tvLogin"
        android:layout_marginTop="48dp"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textStyle="italic"
        android:inputType="textPassword"
        android:layout_below="@id/emailEditText"
        android:layout_marginTop="24dp"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"

        android:layout_below="@id/passwordEditText"


        style="@style/MyButtonStyle"
        android:layout_marginTop="32dp"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_below="@id/loginButton"
        style="@style/MyButtonStyle"
        android:layout_marginTop="16dp"/>

</RelativeLayout>
